--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,11 +17,27 @@
         android:text="@string/get_token" />
 
     <Button
+        android:id="@+id/get_icd_codes_0"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="@string/get_icd_codes_0"
+        android:layout_marginHorizontal="20dp" />
+
+    <Button
         android:id="@+id/get_icd_codes_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="@string/get_icd_codes_1"
+        android:layout_marginHorizontal="20dp" />
+
+    <Button
+        android:id="@+id/get_icd_codes_1_half"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="@string/get_icd_codes_1_half"
         android:layout_marginHorizontal="20dp" />
 
     <Button
